--- a/source/include/config.h.in
+++ b/source/include/config.h.in
@@ -139,6 +139,7 @@
 #undef HAVE_INT32_FROM_RPC_RPC_H
 #undef HAVE_UINT32_FROM_RPC_RPC_H
 #undef KRB4_AUTH
+#undef KRB5_AUTH
 #undef SEEKDIR_RETURNS_VOID
 #undef HAVE_DIRENT_D_OFF
 #undef HAVE_GETSPNAM
@@ -153,6 +154,7 @@
 #undef HAVE_MEMSET
 #undef HAVE_STRCASECMP
 #undef HAVE_STRUCT_DIRENT64
+#undef HAVE_TRUNCATED_SALT
 
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
